Genewise normalizing the data before performing the shape analysis for batch effects
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/branches/RELEASE_3_3/madman/Rpacks/BatchQC@117467 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(getShinyInputOrig)
 export(getShinyInputSVA)
 export(getShinyInputSVAf)
 export(getShinyInputSVAr)
+export(gnormalize)
 export(log2CPM)
 export(rnaseq_sim)
 export(setShinyInput)
