Added feature to optionally output BatchQCout object to batchqc_output.rda R object file
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/branches/RELEASE_3_3/madman/Rpacks/BatchQC@117536 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(setShinyInputOrig)
 export(setShinyInputSVA)
 export(setShinyInputSVAf)
 export(setShinyInputSVAr)
+exportClasses(BatchQCout)
 import(MCMCpack)
 import(corpcor)
 import(d3heatmap)
