Added batchQC_filter_genes function to filter zero variance genes across batch and condition combinations
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/branches/RELEASE_3_3/madman/Rpacks/BatchQC@117616 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(batchQC)
 export(batchQC_analyze)
 export(batchQC_condition_adjusted)
+export(batchQC_filter_genes)
 export(batchQC_fsva_adjusted)
 export(batchQC_num.sv)
 export(batchQC_shapeVariation)
