Fixing R CMD check WARNING and NOTE
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/branches/RELEASE_3_3/madman/Rpacks/BatchQC@117757 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,7 +38,7 @@ Collate: 'simulate_data.R' 'heatmap.R' 'pca.R' 'batchtest.R'
 Suggests: testthat
 Imports: utils, rmarkdown, knitr, pander, gplots, MCMCpack, shiny, sva,
         corpcor, moments, matrixStats, ggvis, d3heatmap, reshape2,
-        limma, grDevices, graphics, stats
+        limma, grDevices, graphics, stats, methods
 biocViews: BatchEffect, GraphAndNetwork, Microarray,
         PrincipalComponent, Sequencing, Software, Visualization,
         QualityControl, RNASeq, Preprocessing, DifferentialExpression
