--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,6 +66,7 @@ importFrom(graphics,rect)
 importFrom(graphics,segments)
 importFrom(graphics,text)
 importFrom(graphics,title)
+importFrom(methods,setOldClass)
 importFrom(shiny,runApp)
 importFrom(stats,IQR)
 importFrom(stats,as.dendrogram)
@@ -86,6 +87,7 @@ importFrom(stats,qqline)
 importFrom(stats,qqnorm)
 importFrom(stats,qqplot)
 importFrom(stats,quantile)
+importFrom(stats,rbeta)
 importFrom(stats,reorder)
 importFrom(stats,rgamma)
 importFrom(stats,rnbinom)
