Added "importFrom methods new" statement to fix the BiocCheck NOTE
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/branches/RELEASE_3_3/madman/Rpacks/BatchQC@118796 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,6 +66,7 @@ importFrom(graphics,rect)
 importFrom(graphics,segments)
 importFrom(graphics,text)
 importFrom(graphics,title)
+importFrom(methods,new)
 importFrom(methods,setOldClass)
 importFrom(shiny,runApp)
 importFrom(stats,IQR)
